# Infantry

./: .gitignore  BUG_FIX_RECORD.md  CtrlBoard-H7_WS1812.ioc  GPT自定义指令，保持输出简洁.txt  README.md  convert_c_h_gb2312_to_utf8.py  gimbal_control_chain.md  keilkilll.bat  代码规范.md  工程框架迁移提示词.md  调试日志.md
Core/Inc/: FreeRTOSConfig.h  main.h  octospi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  octospi.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
MDK-ARM/: CtrlBoard-H7_WS1812.uvprojx
USB_DEVICE/App/: usb_common.c  usb_common.h  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
User/APP/: Safewarning.c  Safewarning.h  auto_aim.c  auto_aim.h  chassis_task.c  chassis_task.h  detect_task.c  detect_task.h  gimbal_task.c  gimbal_task.h  light_task.c  light_task.h  referee_usart_task.c  referee_usart_task.h  service_task.c  service_task.h  usb_task.c  usb_task.h
User/Algorithm/: CRC8_CRC16.h  adrc.c  adrc.h  gravity_comp.c  gravity_comp.h  kalman_filter.h  pid.c  pid.h  user_lib.c  user_lib.h
User/BSP/: bsp_dwt.c  bsp_fdcan.c  bsp_fdcan.h  bsp_tim24.c  bsp_tim24.h  bsp_usart.c  bsp_usart.h  fifo.c  remote_control.c  remote_control.h
User/Communication/example/host/: CMakeLists.txt
User/Communication/example/host/cpp/: host.hpp  host_app.h  host_generic.hpp  main.cpp  main.h  platform.h  platform_shim.hpp
User/Communication/example/host/cpp/hal/: serial_transport_posix.hpp  serial_transport_win32.hpp  transport.hpp
弹道测试数据/: ballistic_drop_fit_result.csv  弹道下坠测试数据.xlsx
(+63 files in other folders)
